# p-challenges

./: .gitignore  .gitmodules  README.md
00-name-generator/: CMakeLists.txt  README.md  main.c  name-generator.c  name-generator.h  person-generator.c  person-generator.h
00-name-generator/lists/: street_names.txt
01-heads-tails/: CMakeLists.txt  main.c
01-name-generator/: main.c  person-generator.c  person-generator.h
02-heads-tails/: CMakeLists.txt
02-temperature-converter/: CMakeLists.txt  main.c  temperature-converter.c
03-temperature-converter/: CMakeLists.txt  temperature-converter.h
04-age-seconds/: CMakeLists.txt  main.c
05-enc-dec/: CMakeLists.txt  base64.c  base64.h  fifo.c  fifo.h  input.h  main.c  out.txt  tests.c
05-enc-dec/src/: base64.c  base64.h  fifo.c  fifo.h  input.c  input.h  main.c  output.c  output.h  tests.c
c/: .gitignore
c/01-name-generator/: CMakeLists.txt  person-generator.c  person-generator.h
c/01-name-generator/lists/: first_names.txt
c/01-name-generator/src/: person-generator.c  person-generator.h
c/02-heads-tails/: heads-tails.c  heads-tails.h
c/04-age-seconds/: CMakeLists.txt
c/05-enc-dec/: CMakeLists.txt
c/05-enc-dec/src/: base64.c  base64.h  fifo.c  fifo.h  input.c  input.h  main.c  output.c  output.h  tests.c
c/tests/: CMakeLists.txt  test.c  test.h
rust/: .gitignore
rust/01-name-generator/: Cargo.toml
rust/01-name-generator/src/: lib.rs  main.rs
